# kv

./: .gitignore  Cargo.toml  abi.proto  design.excalidraw
examples/: client.rs  gen_certs.rs  server.rs  server_sled.rs  server_with_codec.rs
fixtures/: ca.cert  ca.key  client.cert  client.key  server.cert  server.key
src/: client.rs  error.rs  lib.rs  server.rs
src/network/: frame.rs  mod.rs  multiplex.rs  stream_result.rs  tls.rs
src/notify/: mod.rs
src/pb/: abi.rs  mod.rs
src/service/: command_service.rs  mod.rs  topic.rs  topic_service.rs
src/storage/: memory.rs  mod.rs  sled.rs
