

[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
prost = "0.8" # 处理 protobuf 的代码
tracing = "0.1" # 日志处理
thiserror= "1"
dashmap = "5"
sled = "0.34"
flate2 = "1"
tokio ={ version = "1", features = ["full"]}
anyhow = "1" # 错误处理
tracing-subscriber = "0.3" # 日志处理
tokio-rustls = "0.22.0"
rustls-native-certs = "0.5"
futures = "0.3"
tokio-util ={ version = "0.6", features = ["compat"]}
yamux = "0.9" # 支持多路复用


[dev-dependencies]
async-prost = "0.2.1" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
tempfile = "3"
tokio-util ={ version = "0.6", features = ["codec"]}
certify = "0.5"

[build-dependencies]
prost-build = "0.8" # 编译 protobuf